# bookops-callno

./: .gitignore  README.md  pyproject.toml
bookops_callno/: __init__.py  base.py  constructor.py  constructor_bpl.py  constructor_nypl.py  errors.py  normalizer.py  parser.py  rules_bpl.py  rules_shared.py
tests/: test_base.py  test_bookops_callno.py  test_constructor.py  test_constructor_bpl.py  test_normalizer.py  test_parser.py  test_rules_bpl.py  test_rules_shared.py
