[tool.poetry]
name = "bookops-callno"
version = "0.1.0"
description = "Python library for creation of BPL & NYPL call numbers based on bibliographic and order data."
authors = ["klinga <klingaroo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
